# tibet-trust-kernel

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bench  README.md
.cargo/: config.toml
benches/: airlock_bench.rs  bifurcation_bench.rs  container_bench.rs  portmux_bench.rs  profile_bench.rs  ram_raid_bench.rs  roi_bench.rs  seccomp_zandbak_bench.rs  snapshot_bench.rs  upip_pager_bench.rs  vmm_inject_bench.rs  xdp_bench.rs
docs/architecture/: TIBET-CLUSTER-MMU-PAGING.md  TIBET-CONTI-DEFENSIEF.md  TIBET-HARDWARE-PRIMITIVES.md
k8s/: trust-kernel-sidecar.yaml  trust-kernel-standalone.yaml
scripts/: hw_features.sh
src/: airlock_vmm.rs  archivaris.rs  bifurcation.rs  bus.rs  cluster_mux.rs  cluster_transport.rs  config.rs  git_store.rs  lib.rs  llm_mapper.rs  main.rs  mux.rs  osapi_adapter.rs  osapi_mux.rs  overlay_mux.rs  portmux.rs  quic_mux.rs  ram_raid.rs  recovery.rs  seccomp.rs  snaft.rs  snapshot.rs  snapshot_gate.rs  tat_consumer.rs  tibet_token.rs  upip_pager.rs  voorproever.rs  watchdog.rs  xdp.rs  zandbak.rs
