[package]
name = "tibet-trust-kernel"
version = "1.0.0-alpha"
edition = "2021"
description = "Dual-kernel zero-trust sandbox — Voorproever + Archivaris + UPIP + RAM RAID-0, cryptographic proof of every execution"
license = "MIT"
authors = ["Jasper van de Meent <jasper@humotica.com>", "Root AI <root_idd@humotica.nl>"]
keywords = ["trust-kernel", "microvm", "sandbox", "security", "tibet"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/humotica/trust-kernel"
readme = "README.md"
publish = false  # Niet publiceren — eerst laptop-testen!

[package.metadata.docs.rs]
features = ["kvm"]

# NOTE: The `kvm` feature enables real kernel isolation via Ignition
# (https://lttle.cloud / https://github.com/nicholasgasior/ignition)
# Ignition is not yet on crates.io — use path/git dependency when building with KVM:
#   ignition = { git = "https://github.com/nicholasgasior/ignition" }

[features]
default = ["simulation"]
simulation = []                    # Simulated KVM — for testing without hardware
kvm = []                           # Real Ignition KVM — requires /dev/kvm + ignition crate

[dependencies]
userfaultfd = "0.8.1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Airlock Bifurcatie — echte crypto
aes-gcm = "0.10"           # AES-256-GCM via AES-NI (core::arch::x86_64::_mm_aesenc_si128)
x25519-dalek = { version = "2", features = ["static_secrets"] }  # X25519 key agreement
sha2 = "0.10"               # SHA-256
hkdf = "0.12"               # HKDF-SHA256 per-block key derivation
rand = "0.8"                # OsRng voor nonces en ephemeral keys
rayon = "1.10"              # Multi-core parallel sealing/opening

# Real KVM backend — when ignition is published to crates.io:
# ignition = { version = "0.1", optional = true }

[[bin]]
name = "tibet-bench"
path = "src/bin/tibet_bench.rs"

[[bench]]
name = "airlock_bench"
harness = false

[[bench]]
name = "profile_bench"
harness = false

[[bench]]
name = "roi_bench"
harness = false

[[bench]]
name = "portmux_bench"
harness = false

[[bench]]
name = "xdp_bench"
harness = false

[[bench]]
name = "seccomp_zandbak_bench"
harness = false

[[bench]]
name = "snapshot_bench"
harness = false

[[bench]]
name = "upip_pager_bench"
harness = false

[[bench]]
name = "vmm_inject_bench"
harness = false

[[bench]]
name = "container_bench"
harness = false

[[bench]]
name = "ram_raid_bench"
harness = false

[[bench]]
name = "bifurcation_bench"
harness = false
